# fileformats-biosig

./: .flake8  .gitignore  .pre-commit-config.yaml  README.rst  conftest.py  pyproject.toml
.github/workflows/: ci-cd.yml
extras/: README.rst  pyproject.toml
extras/fileformats/extras/biosig/: eeg.py  meg.py  utils.py
extras/fileformats/extras/biosig/tests/: test_eeg.py  test_meg.py
fileformats/biosig/: __init__.py  base.py  eeg.py  meg.py
fileformats/biosig/tests/: test_eeg.py  test_meg.py
