[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fileformats-biosig-extras"
description = "Extra methods for accessing and manipulating the underlying data referenced by fileformats-biosig classes"
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
    "fileformats >= 0.17",
    "mne >= 1.11.0",
    "pydra >= 1.0a7"
]
license = { file = "LICENSE" }
authors = [
    { name = "Miao Cao", email = "miaocao@swin.edu.au" },
    { name = "Thomas G. Close", email = "tom.g.close@gmail.com" }
]
maintainers = [ 
    { name = "Miao Cao", email = "miaocao@swin.edu.au" },
    { name = "Thomas G. Close", email = "tom.g.close@gmail.com" }
]
keywords = [
    "file formats",
    "data",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
    "codespell",
    "flake8",
    "flake8-pyproject",
]
test = [
    "pytest >=6.2.5",
    "pytest-env>=0.6.2",
    "pytest-cov>=2.12.1",
    "codecov",
]

converters = [
]

[project.urls]
repository = "https://github.com/ArcanaFramework/fileformats-biosig"

[tool.hatch.version]
source = "vcs"
raw-options = {root = ".."}

[tool.hatch.build.hooks.vcs]
version-file = "fileformats/extras/biosig/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["fileformats"]

[tool.black]
target-version = ['py38']
exclude = "fileformats/extras/biosig/_version.py"

[tool.codespell]
ignore-words = ".codespell-ignorewords"

[tool.flake8]
doctests = true
per-file-ignores = [
    "__init__.py:F401"
]
max-line-length = 88
select = "C,E,F,W,B,B950"
extend-ignore = ['E203', 'E501', 'E129']
